--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David Dugle</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 
 <body>
@@ -17,26 +17,23 @@
     <!-- going to need two rows that have two buttons each -->
     <!-- going to need a contact me row -->
     <!-- will also need a footer -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">David R Dugle II</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home/About <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                
-            </ul>
+
+<nav class="navbar">
+    <div class="navbar-init">
+        <a href="#" class="navbar-item">
+            <p id="initials" class="py-2 px-2 is-size-1">David Dugle</p>
+        </a>
+    </div>
+    <div class="navbar-menu" id="nav-links">
+        <div class="navbar-end">
+            <a href="portfolio.html" class="navbar-item">Portfolio</a>
+            <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank" class="navbar-item">LinkedIn</a>
+            <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
+            <a href="/assets/Resume.pdf" class="navbar-item">Resume</a>
+
         </div>
-    </nav>
-
-
+    </div>
+</nav>
 
 
 
