--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>David Dugle</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
@@ -18,29 +22,59 @@
     <!-- going to need a contact me row -->
     <!-- will also need a footer -->
 
-<nav class="navbar">
-    <div class="navbar-init">
-        <a href="#" class="navbar-item">
-            <p id="initials" class="py-2 px-2 is-size-1">David Dugle</p>
-        </a>
-    </div>
-    <div class="navbar-menu" id="nav-links">
-        <div class="navbar-end">
-            <a href="portfolio.html" class="navbar-item">Portfolio</a>
-            <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank" class="navbar-item">LinkedIn</a>
-            <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
-            <a href="/assets/Resume.pdf" class="navbar-item">Resume</a>
+    <nav class="navbar has-background-black has-text-light">
+        <div class="navbar-init">
+            <a href="#" class="navbar-item">
+                <p id="initials" class="py-2 px-2 is-size-1">DD</p>
+            </a>
+            <a class="navbar-burger" id="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </div>
+        <div class="navbar-menu" id="nav-links">
+            <div class="navbar-end is-size-5">
+                <a href="portfolio.html" class="navbar-item">Portfolio</a>
+                <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank"
+                    class="navbar-item">LinkedIn</a>
+                <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
+                <a href="https://github.com/daviddugle/Professional-Materials/blob/main/assets/Resume.pdf"
+                    target="_blank" class="navbar-item">Resume</a>
 
+            </div>
+        </div>
+    </nav>
+    <main class="section">
+        <div class="container">
+            <div class="columns is-half has-text-centered pt-6 mgt-large">
+                <div class="column naming-sect ">
+                    <div class="is-size-1" id="first-name">David</div>
+                    <div class="is-size-1" id="last-name">Dugle</div>
+                    <p class="is-size-3" id="desciptor">Full-Stack Developer</p>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column has-text-right">
+                    <button class="button" id="cont-info">Contact Me</button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="modal">
+        <div class="modal-background" id="modal-back"></div>
+        <div class="modal-content has-background-white py-5 px-5">
+            <div>Contact Info</div>
+            <a href="mailto:david.dugleii@yahoo.com">david.dugleii@yahoo.com</a>
+            <p class="phone-num">980.777.0729</p>
         </div>
     </div>
-</nav>
 
 
 
 
 
-
-
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
