--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
@@ -12,6 +14,29 @@
     <!-- going to need a navbar with a link to the main page -->
     <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
     <!-- will also need a footer -->
+    <nav class="navbar">
+        <div class="navbar-init">
+            <a href="#" class="navbar-item">
+                <p id="myName" class="py-2 px-2 is-size-1">David Dugle</p>
+            </a>
+            <a class="navbar-burger" id="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </div>
+        <div class="navbar-menu" id="nav-links">
+            <div class="navbar-end is-size-5">
+                <a href="portfolio.html" class="navbar-item">Portfolio</a>
+                <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank"
+                    class="navbar-item">LinkedIn</a>
+                <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
+                <a href="https://github.com/daviddugle/Professional-Materials/blob/main/assets/Resume.pdf"
+                    target="_blank" class="navbar-item">Resume</a>
+
+            </div>
+        </div>
+    </nav>
 
 </body>
 
