--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>David Dugle</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Archivo+Black&family=Righteous&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
 
-    <!-- going to need a navbar -->
-    <!-- going to need a container with four rows -->
-    <!-- going to need a photo and an about me area (two columns) -->
-    <!-- going to need two rows that have two buttons each -->
-    <!-- going to need a contact me row -->
-    <!-- will also need a footer -->
 
-    <nav class="navbar has-background-black has-text-light">
+
+    <!-- going to need a navbar -->
+    <nav class="navbar has-background-black has-text-dark is-transparent">
         <div class="navbar-init">
             <a href="#" class="navbar-item">
                 <p id="initials" class="py-2 px-2 is-size-1">DD</p>
@@ -47,7 +46,7 @@
     </nav>
     <main class="section">
         <div class="container">
-            <div class="columns is-half has-text-centered pt-6 mgt-large">
+            <div class="columns is-half has-text-centered has-text-black pt-6 mgt-large">
                 <div class="column naming-sect ">
                     <div class="is-size-1" id="first-name">David</div>
                     <div class="is-size-1" id="last-name">Dugle</div>
@@ -56,14 +55,14 @@
             </div>
             <div class="columns">
                 <div class="column has-text-right">
-                    <button class="button" id="cont-info">Contact Me</button>
+                    <button class="button has-background-black has-text-link" id="cont-info">Contact Me</button>
                 </div>
             </div>
         </div>
     </main>
     <div class="modal">
         <div class="modal-background" id="modal-back"></div>
-        <div class="modal-content has-background-white py-5 px-5">
+        <div class="modal-content has-background-white has-text-black py-5 px-5">
             <div>Contact Info</div>
             <a href="mailto:david.dugleii@yahoo.com">david.dugleii@yahoo.com</a>
             <p class="phone-num">980.777.0729</p>
