--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,16 @@
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Archivo+Black&family=Righteous&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="assets/style.css">
+
+
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
 
@@ -14,10 +24,10 @@
     <!-- going to need a navbar with a link to the main page -->
     <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
     <!-- will also need a footer -->
-    <nav class="navbar">
+    <nav class="navbar has-background-black has-text-dark is-transparent">
         <div class="navbar-init">
-            <a href="#" class="navbar-item">
-                <p id="myName" class="py-2 px-2 is-size-1">David Dugle</p>
+            <a href="index.html" class="navbar-item">
+                <p id="initials" class="py-2 px-2 is-size-1">DD</p>
             </a>
             <a class="navbar-burger" id="burger">
                 <span></span>
@@ -27,7 +37,6 @@
         </div>
         <div class="navbar-menu" id="nav-links">
             <div class="navbar-end is-size-5">
-                <a href="portfolio.html" class="navbar-item">Portfolio</a>
                 <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank"
                     class="navbar-item">LinkedIn</a>
                 <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
@@ -37,6 +46,40 @@
             </div>
         </div>
     </nav>
+    <main class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-6">
+                    <h4 class="first-card">Weather Dashboard</h4>
+                    <img src="https://github.com/daviddugle/Weather-Dashboard/blob/main/assets/Photos/Screenshot%202020-11-13%20204346.jpg?raw=true"
+                        alt="weather dashboard">
+                    <div class="links">
+                        <a href="https://github.com/daviddugle/Weather-Dashboard">Git Link</a>
+                        <a href="https://daviddugle.github.io/Weather-Dashboard/">Deployed Link</a>
+                    </div>
+                </div>
+                <div class="column is-6">
+                    <h4 class="second-card">Work Day Scheduler</h4>
+                    <img src="https://github.com/daviddugle/Work-Day-Scheduler/blob/main/assets/Screenshot%202020-11-11%20125954.jpg?raw=true"
+                        alt="Work Day Scheduler">
+                    <div class="links">
+                        <a href="https://github.com/daviddugle/Work-Day-Scheduler">Git Link</a>
+                        <a href="https://daviddugle.github.io/Work-Day-Scheduler/">Deployed Link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column is-6">
+                    <h4 class="third-card">Honest Trailers</h4>
+                    <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png" alt="Honest Trailers">
+                    <div class="links">
+                        <a href="https://github.com/v-lax/movie_trailer_web_app">Git Link</a>
+                        <a href="https://v-lax.github.io/movie_trailer_web_app/index.html">Deployed Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 
