pretty sure all I have to do is fix the pdf

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </nav>
+    <!-- This will be the display of my name -->
     <main class="section">
         <div class="container">
             <div class="columns is-half has-text-centered has-text-black pt-6 mgt-large">
@@ -52,6 +53,7 @@
                     <p class="is-size-3" id="desciptor">Full-Stack Developer</p>
                 </div>
             </div>
+            <!-- This is going to be the button for my information        -->
             <div class="columns">
                 <div class="column has-text-right">
                     <button class="button has-background-black has-text-link" id="cont-info">Contact Me</button>
@@ -59,6 +61,7 @@
             </div>
         </div>
     </main>
+    <!-- This is the modal for my contact information -->
     <div class="modal">
         <div class="modal-background" id="modal-back"></div>
         <div class="modal-content has-background-white has-text-black py-5 px-5">
