--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,7 @@
 
 <body>
     <!-- going to need a navbar with a link to the main page -->
-    <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
-    <!-- will also need a footer -->
+    
     <nav class="navbar has-background-black has-text-dark is-transparent">
         <div class="navbar-init">
             <a href="index.html" class="navbar-item">
@@ -46,6 +45,8 @@
             </div>
         </div>
     </nav>
+        <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
+
     <main class="section">
         <div class="container">
             <div class="columns">
@@ -55,7 +56,9 @@
                         alt="weather dashboard">
                     <div class="links">
                         <a href="https://github.com/daviddugle/Weather-Dashboard">Git Link</a>
-                        <a href="https://daviddugle.github.io/Weather-Dashboard/">Deployed Link</a>
+                        <p></p>
+                        <a class="justify-content-end" href="https://daviddugle.github.io/Weather-Dashboard/">Deployed
+                            Link</a>
                     </div>
                 </div>
                 <div class="column is-6">
@@ -64,6 +67,7 @@
                         alt="Work Day Scheduler">
                     <div class="links">
                         <a href="https://github.com/daviddugle/Work-Day-Scheduler">Git Link</a>
+                        <p></p>
                         <a href="https://daviddugle.github.io/Work-Day-Scheduler/">Deployed Link</a>
                     </div>
                 </div>
@@ -71,9 +75,11 @@
             <div class="columns">
                 <div class="column is-6">
                     <h4 class="third-card">Honest Trailers</h4>
-                    <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png" alt="Honest Trailers">
+                    <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png"
+                        alt="Honest Trailers">
                     <div class="links">
                         <a href="https://github.com/v-lax/movie_trailer_web_app">Git Link</a>
+                        <p></p>
                         <a href="https://v-lax.github.io/movie_trailer_web_app/index.html">Deployed Link</a>
                     </div>
                 </div>
