made a few css changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="columns">
                 <div class="column is-6">
-                    <h4 class="first-card">Weather Dashboard</h4>
+                    <div class="first-card">Weather Dashboard</div>
                     <img src="https://github.com/daviddugle/Weather-Dashboard/blob/main/assets/Photos/Screenshot%202020-11-13%20204346.jpg?raw=true"
                         alt="weather dashboard">
                     <div class="links">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="column is-6">
-                    <h4 class="second-card">Work Day Scheduler</h4>
+                    <div class="second-card">Work Day Scheduler</div>
                     <img src="https://github.com/daviddugle/Work-Day-Scheduler/blob/main/assets/Screenshot%202020-11-11%20125954.jpg?raw=true"
                         alt="Work Day Scheduler">
                     <div class="links">
@@ -74,7 +74,7 @@
             </div>
             <div class="columns">
                 <div class="column is-6">
-                    <h4 class="third-card">Honest Trailers</h4>
+                    <div class="third-card">Honest Trailers</div>
                     <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png"
                         alt="Honest Trailers">
                     <div class="links">
