made a few css changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
                     <img src="https://github.com/daviddugle/Weather-Dashboard/blob/main/assets/Photos/Screenshot%202020-11-13%20204346.jpg?raw=true"
                         alt="weather dashboard">
                     <div class="links">
-                        <a href="https://github.com/daviddugle/Weather-Dashboard" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/daviddugle/Weather-Dashboard" target="_blank">Git Link</a>
                         <p></p>
-                        <a class="justify-content-end" href="https://daviddugle.github.io/Weather-Dashboard/" target="_blank">Deployed
+                        <a class="justify-content-end link" href="https://daviddugle.github.io/Weather-Dashboard/" target="_blank">Deployed
                             Link</a>
                     </div>
                 </div>
@@ -66,9 +66,9 @@
                     <img src="https://github.com/daviddugle/Work-Day-Scheduler/blob/main/assets/Screenshot%202020-11-11%20125954.jpg?raw=true"
                         alt="Work Day Scheduler">
                     <div class="links">
-                        <a href="https://github.com/daviddugle/Work-Day-Scheduler" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/daviddugle/Work-Day-Scheduler" target="_blank">Git Link</a>
                         <p></p>
-                        <a href="https://daviddugle.github.io/Work-Day-Scheduler/" target="_blank">Deployed Link</a>
+                        <a class="link" href="https://daviddugle.github.io/Work-Day-Scheduler/" target="_blank">Deployed Link</a>
                     </div>
                 </div>
             </div>
@@ -78,9 +78,9 @@
                     <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png"
                         alt="Honest Trailers">
                     <div class="links">
-                        <a href="https://github.com/v-lax/movie_trailer_web_app" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/v-lax/movie_trailer_web_app" target="_blank">Git Link</a>
                         <p></p>
-                        <a href="https://v-lax.github.io/movie_trailer_web_app/index.html" target="_blank">Deployed Link</a>
+                        <a class="link" href="https://v-lax.github.io/movie_trailer_web_app/index.html" target="_blank">Deployed Link</a>
                     </div>
                 </div>
             </div>
