--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- going to need a navbar -->
     <nav class="navbar has-background-black has-text-dark is-transparent">
         <div class="navbar-init">
-            <a href="#" class="navbar-item">
+            <a href="index.html" class="navbar-item">
                 <p id="initials" class="py-2 px-2 is-size-1">DD</p>
             </a>
             <a class="navbar-burger" id="burger">
