I had the resume wrong, but it's good now

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- going to need a navbar with a link to the main page -->
-    
+
     <nav class="navbar has-background-black has-text-dark is-transparent">
         <div class="navbar-init">
             <a href="index.html" class="navbar-item">
@@ -39,13 +39,12 @@
                 <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank"
                     class="navbar-item">LinkedIn</a>
                 <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
-                <a href="https://github.com/daviddugle/Professional-Materials/blob/main/assets/Resume.pdf"
-                    target="_blank" class="navbar-item">Resume</a>
+                <a href="assets/Resume.pdf" target="_blank" class="navbar-item">Resume</a>
 
             </div>
         </div>
     </nav>
-        <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
+    <!-- going to need two rows, they are going to have a card with a title/photo/two buttons -->
 
     <main class="section">
         <div class="container">
@@ -55,9 +54,11 @@
                     <img src="https://github.com/daviddugle/Weather-Dashboard/blob/main/assets/Photos/Screenshot%202020-11-13%20204346.jpg?raw=true"
                         alt="weather dashboard">
                     <div class="links">
-                        <a class="link" href="https://github.com/daviddugle/Weather-Dashboard" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/daviddugle/Weather-Dashboard" target="_blank">Git
+                            Link</a>
                         <p></p>
-                        <a class="justify-content-end link" href="https://daviddugle.github.io/Weather-Dashboard/" target="_blank">Deployed
+                        <a class="justify-content-end link" href="https://daviddugle.github.io/Weather-Dashboard/"
+                            target="_blank">Deployed
                             Link</a>
                     </div>
                 </div>
@@ -66,9 +67,11 @@
                     <img src="https://github.com/daviddugle/Work-Day-Scheduler/blob/main/assets/Screenshot%202020-11-11%20125954.jpg?raw=true"
                         alt="Work Day Scheduler">
                     <div class="links">
-                        <a class="link" href="https://github.com/daviddugle/Work-Day-Scheduler" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/daviddugle/Work-Day-Scheduler" target="_blank">Git
+                            Link</a>
                         <p></p>
-                        <a class="link" href="https://daviddugle.github.io/Work-Day-Scheduler/" target="_blank">Deployed Link</a>
+                        <a class="link" href="https://daviddugle.github.io/Work-Day-Scheduler/" target="_blank">Deployed
+                            Link</a>
                     </div>
                 </div>
             </div>
@@ -78,9 +81,11 @@
                     <img src="https://raw.githubusercontent.com/v-lax/movie_trailer_web_app/main/assets/deployed.png"
                         alt="Honest Trailers">
                     <div class="links">
-                        <a class="link" href="https://github.com/v-lax/movie_trailer_web_app" target="_blank">Git Link</a>
+                        <a class="link" href="https://github.com/v-lax/movie_trailer_web_app" target="_blank">Git
+                            Link</a>
                         <p></p>
-                        <a class="link" href="https://v-lax.github.io/movie_trailer_web_app/index.html" target="_blank">Deployed Link</a>
+                        <a class="link" href="https://v-lax.github.io/movie_trailer_web_app/index.html"
+                            target="_blank">Deployed Link</a>
                     </div>
                 </div>
             </div>
