--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <a href="https://www.linkedin.com/in/david-dugle-54b16641/" target="_blank"
                     class="navbar-item">LinkedIn</a>
                 <a href="https://github.com/daviddugle" target="_blank" class="navbar-item">Github</a>
-                <a href="https://github.com/daviddugle/Professional-Materials/blob/main/assets/Resume.pdf"
-                    target="_blank" class="navbar-item">Resume</a>
+                <a href="assets/Resume.pdf" target="_blank" class="navbar-item">Resume</a>
 
             </div>
         </div>
