--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </script>
 
 
-    <!-- <script src="assets/script.js"></script> -->
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
