--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="//code.jquery.com/jquery-3.5.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </main>
-
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
