updated the portfolio to include new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,32 @@
                             target="_blank">Deployed Link</a>
                     </div>
                 </div>
+
+                <div class="column is-6">
+                    <div class="second-card">Daily Service Record</div>
+                    <img src="assets/dailyPlanner.jpg" alt="daily scheduler">
+                    <div class="links">
+                        <a class="link" href="https://github.com/diminako/daily_service_record" target="_blank">Git
+                            Link</a>
+                        <p></p>
+                        <a class="link" href="https://mighty-spire-89072.herokuapp.com/" target="_blank">Deployed
+                            Link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column is-6">
+                    <div class="third-card">Burger Logger</div>
+                    <img src="https://github.com/daviddugle/Burger-Logger/raw/main/public/assets/burgerPhoto.jpg"
+                        alt="Burger Logger Photo">
+                    <div class="links">
+                        <a class="link" href="https://github.com/daviddugle/Burger-Logger" target="_blank">Git
+                            Link</a>
+                        <p></p>
+                        <a class="link" href="https://intense-garden-63215.herokuapp.com/"
+                            target="_blank">Deployed Link</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
